<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auto Tasker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="title_activity_main">Auto Tasker</string>
    <string name="str_btn_find">Find</string>
    <string name="Add_new_task">Add New Task</string>
    <string name="hnt_et_location">Enter location</string>
    <string name="location">Location:-</string>
    <string name="Message">Message:-</string>
    <string name="Map_page_header">MAP</string>
    <string name="Layout_picklocation_text">Pick a Location</string>
    <string name="Layout_taskname_text">Give it a name</string>
    <string name="Layout_action_text">Action</string>
    <string name="new_task_text">New Task</string>
     <string name="add_task_text">Add New Task</string>
    <string name="layout_actionchooser_ok">OK</string>
    <string name="SearchEditHint">Type Street, City, State</string>
    <string name="HintString">  Add Reminder   </string>
    <string name="spinner_title">Select Radius</string>
    <string name="setting">Setting</string>
    <string name="Change_Your_Pattern">Change Your Pattern</string>
    <string name="about_company">About Company</string>
    <string name="about_product">About Product</string>
    <string name="more_app">More App</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="Application">Application</string>
    <string name="search_location_text">Search Location</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="sound">Sound</string>
    <string name="sqrty_question">Enter your security Question</string>
     <string name="forget_sqrty_question">Your security Question</string>
      <string name="sqrty_answer">Enter your security Answer</string>
      <string name="forget_pswrd">Forgot Password</string>
      <string name="ok">OK</string>
      <string name="help_text">Tutorial</string>
      <string name="default_applock">Default App Lock</string>
      <string name="applicationlist">Application List</string>
      <string name="applicationcount">Application selected</string>
      <string name="URL">Tutorial Video</string>
      <string name="option_edit">EDIT</string>
      <string name="option_delete">DELETE</string>
    <string name="Banner_ad_id">ca-app-pub-1765898360821109/4906755477</string>
    <string name="full_ad_id">ca-app-pub-1765898360821109/6383488675</string>
    
</resources>
