<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_header_height"
        android:layout_alignParentLeft="true"
        android:background="@color/headercolor" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/forget_pswrd"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_color"
            android:textStyle="normal" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/top"
        android:layout_centerHorizontal="false"
        android:layout_margin="@dimen/add_new_loc_padding"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_sqrty_question"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextSecurityQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sqrty_answer"
            android:layout_marginTop="@dimen/add_new_loc_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextSecurityAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="text" />
        <Button
            android:id="@+id/btnSecuritySave"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rectangleselector"
            android:text="@string/ok"
            android:layout_marginTop="@dimen/button_height"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_color" />
    </LinearLayout>

</RelativeLayout>