<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:id="@+id/top"
        android:layout_height="@dimen/top_header_heightformenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/headercolor" >

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="2dp"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true"
            android:src="@drawable/menubtnselector" 
            android:contentDescription="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_color"
            android:textStyle="normal" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:padding="@dimen/add_new_loc_padding" >

        <ImageView
            android:id="@+id/addlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:layout_centerHorizontal="true"
            android:src="@drawable/adtaskbuttonselector" />

        <!-- <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/add_new_loc_padding"
            android:text="@string/Add_new_task"
            android:textSize="@dimen/text_size_add_new" /> -->
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/list_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/top_layout">
    <ImageView
    android:id="@+id/img_watermark"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:src="@drawable/watermark" 
    android:contentDescription="@null"/>
   <!--  <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_layout" > -->
    <ListView
        android:id="@+id/pick_address_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:dividerHeight="2dp"
        android:layout_above="@+id/add_layout"
        >
    </ListView> 
   <!--  </RelativeLayout> -->
    <LinearLayout
        android:id="@+id/add_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" 
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        </LinearLayout>
    </RelativeLayout>
	<LinearLayout
    android:id="@+id/menu_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/top"
    android:background="@drawable/bg_prom"
    android:visibility="gone"
    android:orientation="vertical" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/aboutCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                 android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/about_company"
                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/text_color" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/line"
                android:contentDescription="@null" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/aboutProductbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/about_product"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/line"
                android:contentDescription="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/settingbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/setting"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/line"
                android:contentDescription="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/morebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/more_app"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color" />
			<ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/line"
                android:contentDescription="@null" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/removeads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/remove_ads"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>