<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:background="#FFFFFF">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:orientation="vertical"
       >

	<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/headercolor" 
    >

		<TextView
		    android:id="@+id/wifitext"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		   android:layout_centerHorizontal="true"
		    android:text="@string/app_name"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:textColor="#FFFFFF" />

		

    </RelativeLayout>
    <RelativeLayout
                android:id="@+id/relativelayout_edittask"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="2dp"
                android:background="@color/layout_bg_color" >

                <TextView
                    android:id="@+id/task_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="left"
                    android:paddingLeft="@dimen/padding_text"
                    android:paddingRight="@dimen/padding_text"
                    android:text="@string/option_edit"
                    android:layout_toRightOf="@+id/img_lock"
                    android:textColor="@color/black"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/img_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:layout_marginLeft="@dimen/margin_left_icon"
                    android:src="@drawable/giveitname_un" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativelayout_deletetask"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/layout_height"
                android:layout_below="@id/relativelayout_edittask"
                android:layout_marginTop="2dp"
                android:background="@color/layout_bg_color" >

                <TextView
                    android:id="@+id/picklocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="left"
                    android:paddingLeft="@dimen/padding_text"
                    android:paddingRight="@dimen/padding_text"
                    android:text="@string/option_delete"
                    android:layout_toRightOf="@+id/img_lockpattern"
                    android:textColor="@color/black"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/img_lockpattern"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:layout_marginLeft="@dimen/margin_left_icon"
                    android:src="@drawable/delete_icon" />

            </RelativeLayout>
     </LinearLayout>
</RelativeLayout>